# basis_set_generator_gms

./: README.md  ccn-dk-get_basis.py  generate_basis_sets.py
basis_parser/: README.md
example/: Makefile  basis_aug_ccn.f90  basis_aug_ccn_dk.f90  basis_aug_ccn_dk_pv5z.f90  basis_aug_ccn_dk_pvdz.f90  basis_aug_ccn_dk_pvqz.f90  basis_aug_ccn_dk_pvtz.f90  basis_aug_ccn_pv5z.f90  basis_aug_ccn_pv6z.f90  basis_aug_ccn_pvdz.f90  basis_aug_ccn_pvqz.f90  basis_aug_ccn_pvtz.f90  (+16 more)
test/: CMakeLists.txt  README.md
test/app/: main.f90
test/src/: basis_aug_cc.f90  basis_aug_cc_aug_cc_pv5z.f90  basis_aug_cc_aug_cc_pv6z.f90  basis_aug_cc_aug_cc_pvdz.f90  basis_aug_cc_aug_cc_pvqz.f90  basis_aug_cc_aug_cc_pvtz.f90  basis_aug_cc_dk.f90  basis_aug_cc_dk_aug_cc_pv5z_dk.f90  basis_aug_cc_dk_aug_cc_pvdz_dk.f90  basis_aug_cc_dk_aug_cc_pvqz_dk.f90  basis_aug_cc_dk_aug_cc_pvtz_dk.f90  basis_aug_cc_pv5z.f90  basis_aug_cc_pv6z.f90  basis_aug_cc_pvdz.f90  basis_aug_cc_pvqz.f90  basis_aug_cc_pvtz.f90  basis_aug_pcseg.f90  basis_aug_pcseg_aug_pcseg_0.f90  basis_aug_pcseg_aug_pcseg_1.f90  basis_aug_pcseg_aug_pcseg_2.f90  basis_aug_pcseg_aug_pcseg_3.f90  basis_aug_pcseg_aug_pcseg_4.f90  basis_aug_pcseg_b_0.f90  basis_aug_pcseg_b_1.f90  basis_aug_pcseg_b_2.f90  basis_aug_pcseg_b_3.f90  basis_aug_pcseg_b_4.f90  basis_cc.f90  basis_cc_cc_pv5z.f90  basis_cc_cc_pv6z.f90  basis_cc_cc_pvdz.f90  basis_cc_cc_pvqz.f90  basis_cc_cc_pvtz.f90  basis_cc_dk.f90  basis_cc_dk_cc_pv5z_dk.f90  basis_cc_dk_cc_pvdz_dk.f90  basis_cc_dk_cc_pvqz_dk.f90  basis_cc_dk_cc_pvtz_dk.f90  basis_cc_pv5z.f90  basis_cc_pv6z.f90  (+133 more)
(+32 files in other folders)
